--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -18,7 +18,7 @@ env:
   EM_CACHE_FOLDER: 'emsdk-cache'
 jobs:
   build-and-deploy:
-    if: github.repository == 'lvgl/lvgl'
+    if: github.repository == 'flyingcys/github_action_test/actions'
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout
